doc: try to merge example

--- a/packages/containers/sandbox/package.json
+++ b/packages/containers/sandbox/package.json
@@ -20,7 +20,7 @@
   "author": "Talend Frontend <frontend@talend.com>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@talend/scripts": "file:../../scripts",
+    "@talend/scripts": "0.20.0",
     "compression": "^1.7.3",
     "express": "^4.16.4"
   },
