--- a/packages/stepper/package.json
+++ b/packages/stepper/package.json
@@ -5,7 +5,7 @@
   "mainSrc": "src/index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "prepublish": "babel -d lib ./src/ && rimraf lib/**/*.test.js && cpx -v \"./src/**/*.scss\" ./lib",
+    "prepublish": "tsc && cpx -v \"./src/**/*.scss\" ./lib",
     "start": "start-storybook -p 6009",
     "test": "jest --silent",
     "test:noisy": "jest",
@@ -51,6 +51,19 @@
     "@storybook/react": "^5.2.3",
     "@talend/icons": "^4.14.0-1",
     "@talend/react-components": "^4.14.0-1",
+    "@types/classnames": "^2.2.7",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/invariant": "^2.2.29",
+    "@types/lodash": "^4.14.144",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.10",
+    "@types/react-transition-group": "^2.3.1",
+    "@types/react-redux": "^5.0.7",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-i18next": "^7.6.1",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.0",
@@ -76,7 +89,9 @@
     "react-transition-group": "^2.3.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0"
+    "style-loader": "^0.23.0",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.4"
   },
   "peerDependencies": {
     "@talend/icons": "^4.14.0-1",
